--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   dio: ^4.0.6
+  lottie: ^1.2.2
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+   - images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
